add additional part